--- a/index.html
+++ b/index.html
@@ -43,28 +43,28 @@
           <div class="cards-item">
             <img class="cards-image" alt="Внимание" src="images/cards-attention.png">
             <h3 class="cards-title">Два вида внимания</h3>
-            <p class="cards-description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</div>
-            </p>
+            <p class="cards-description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+          </div>
           <div class="cards-item">
             <img class="cards-image" alt="Recall" src="images/cards-recall.png">
             <h3 class="cards-title">Recall</h3>
-            <p class="cards-description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</div>
-          </p>
+            <p class="cards-description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </div>
           <div class="cards-item">
             <img class="cards-image" alt="Интерливинг" src="images/cards-interliving.png">
             <h3 class="cards-title">Интерливинг</h3>
-            <p class="cards-description">Изучайте несколько навыков одновременно, они обогащают друг друга.</div>
-          </p>
+            <p class="cards-description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </div>
           <div class="cards-item">
             <img class="cards-image" alt="Вопросы" src="images/cards-question.png">
             <h3 class="cards-title">Вопросы</h3>
-            <p class="cards-description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</div>
-          </p>
+            <p class="cards-description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+          </div>
           <div class="cards-item">
             <img class="cards-image" alt="Иллюзия компетентности" src="images/cards-competence.png">
             <h3 class="cards-title">Иллюзия компетентности</h3>
-            <p class="cards-description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</div>
-          </p>
+            <p class="cards-description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+          </div>  
         </div>
       </section>
 
@@ -83,12 +83,13 @@
 
       <section class="oakley">
         <div class="description__two-columns">
-          <p class="description__two-columns-brief oakley-title link_opacity" href="#">История Барбары Оакли.</p>
+          <a class="description__two-columns-brief oakley-title link_opacity" href="#">История Барбары Оакли.</a>
           <div class="description__two-columns-main-text">
             <p class="description__two-columns-main-text_paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
             <div class="description__two-columns-main-text_paragraph">
             </div>
           </div>
+        </div>
       </section>
 
       <section class="feynman">
